Csrf token detailhtml에 추가

--- a/Repairedproj/product/templates/product_detail.html
+++ b/Repairedproj/product/templates/product_detail.html
@@ -8,6 +8,7 @@
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                     <form method="POST" action="/order/create/">
+                        {% csrf_token %}
                         {% for field in form %}
                         <div class="form-group">
                             {% ifnotequal field.name 'product' %}
